# receipt_site

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: forms.py  models.py  views.py
expences/: asgi.py  settings.py  urls.py  views.py  wsgi.py
expences/templates/: index.html  login.html
import_receipt/: admin.py  apps.py  forms.py  middleware.py  models.py  views.py
import_receipt/migrations/: 0001_initial.py
import_receipt/templates/: upload.html
project/: settings.py  urls.py
